--- a/06_portfolio1/src/start/styles/globals/_functions.scss
+++ b/06_portfolio1/src/start/styles/globals/_functions.scss
@@ -1,8 +1,10 @@
+@use "variables" as *;
 @use "sass:math";
 
-$default-min-bp: 375px;
-$default-max-bp: 1280px;
-$root-font-size: 16px;
+
+// $default-min-bp: 375px;
+// $default-max-bp: 1280px;
+// $root-font-size: 16px;
 
 @function to-rem($px) {
   $rem: math.div($px, $root-font-size) * 1rem;
