reset.cssとMedia Qeuryを導入しよう

--- a/06_portfolio1/src/start/styles/style.scss
+++ b/06_portfolio1/src/start/styles/style.scss
@@ -1,4 +1,5 @@
-﻿@use "./parts/common";
+﻿@use "./vendors/css-reset.css";
+@use "./parts/common";
 @use "./parts/mouse";
 @use "./parts/menu";
 @use "./parts/fonts";
