--- a/06_portfolio1/src/start/styles/pages/_home.scss
+++ b/06_portfolio1/src/start/styles/pages/_home.scss
@@ -1,8 +1,11 @@
-* {
-    box-sizing: border-box;
-}
+@use "../globals" as *;
+
 body {
     background: black;
+
+    @include mq("lg") {
+        background-color: #fff;
+    }
 }
 .fv {
     position: relative;
