CSS変数をサイトに導入しよう

--- a/06_portfolio1/src/start/styles/parts/_common.scss
+++ b/06_portfolio1/src/start/styles/parts/_common.scss
@@ -1,5 +1,11 @@
 @use "../globals" as *;
 
+:root {
+    --c-black: #{$c-black};
+    --c-white: #{$c-white};
+    --c-gray: #{$c-gray};
+}
+
 body {
     font-family: $base-font;
 }
